--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h2 {
 }
 .phantom {
   padding-top: 60px;
-  background-image: url("img/Phantom.png");
+  background-image: url("img/phantom.png");
 }
 
 .edge {
